# rtsp

./: CHANGELOG.md  Makefile  README.md  justfile  pyproject.toml
rtsp/: __main__.py  rotation.py  saver.py  subprocess_ext.py  writer.py
rtspware/: __main__.py  saver.py
tests/: test_rotation.py
